--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@600&display=swap');
 
-
+:root{
+    --line-border-fill: #3498db;
+    --line-border-empty: #e0e0e0;
+}
 
 * {
     box-sizing: border-box;
@@ -34,7 +37,7 @@ body{
 
 .progress-container::before{
     content: '';
-    background-color: #e0e0e0;
+    background-color: var(--line-border-empty);
     position: absolute;
     top: 50%;
     left: 0;
@@ -57,5 +60,59 @@ body{
 }
 
 .circle{
-    
+    background: var(--line-border-empty);
+     box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+   -8px -8px 12px 0 rgba(255, 255, 255, 0.4);
+    color: #292929;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    /* Centering numbers on circles */
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px dashed #e0e0e0;
+    transition: .4s ease;
 }
+
+.circle.active{
+    border-color: var(--line-border-fill);
+}
+
+.btn{
+    background-color: var(--line-border-fill);
+    color: #fff;
+    border: 0;
+    border-radius: 6px;
+    cursor: pointer;
+    font-family: inherit;
+    padding: 8px 30px;
+    margin:5px;
+    font-size: 16px;
+}
+
+.btn:active {
+    transform: scale(0.98) 0.3s ease;
+}
+
+.btn:focus{
+    outline: 1px dashed #e0e0e0;
+}
+.btn:disabled{
+    background-color: var(--line-border-empty);
+    cursor: not-allowed;
+    border: 1px dashed var(--line-border-fill);
+}
+
+.element {
+    margin-top: 60px;
+    align-items: center;
+    background: linear-gradient(-45deg, rgba(0,0,0,0.22), rgba(255,255,255,0.25));
+    box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+     -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+    display: flex;
+    height: 50px;
+    justify-content: center;
+    width: 50px;
+  }
