--- a/styles/main.css
+++ b/styles/main.css
@@ -14,9 +14,6 @@
 body{
     background-color: #f6f7fb;
     font-family: 'Mulish', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     height: 100vh;
     overflow: hidden;
     margin: 0;
@@ -24,11 +21,23 @@ body{
 
 .container{
     text-align: center;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container2{
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .progress-container{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     position: relative;
     margin-bottom: 30px;
     width: 450px;
@@ -61,7 +70,7 @@ body{
 
 .circle{
     background: var(--line-border-empty);
-     box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+    box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
    -8px -8px 12px 0 rgba(255, 255, 255, 0.4);
     color: #292929;
     border-radius: 50%;
@@ -71,8 +80,9 @@ body{
     display:flex;
     justify-content: center;
     align-items: center;
-    border: 3px dashed #e0e0e0;
+    border: 2px solid #dcdcdc;
     transition: .4s ease;
+    position: relative;
 }
 
 .circle.active{
@@ -87,7 +97,7 @@ body{
     cursor: pointer;
     font-family: inherit;
     padding: 8px 30px;
-    margin:5px;
+    margin:10px;
     font-size: 16px;
 }
 
@@ -105,14 +115,44 @@ body{
 }
 
 .element {
+    position: relative;
+	display: inline-block;
     margin-top: 60px;
     align-items: center;
-    background: linear-gradient(-45deg, rgba(0,0,0,0.22), rgba(255,255,255,0.25));
-    box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
-     -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    background: #e0e0e0;
+    box-shadow: 7px 7px 23px #bebebe, -7px -7px 23px #ffffff;
     border-radius: 50%;
     display: flex;
     height: 50px;
     justify-content: center;
     width: 50px;
   }
+
+  /* Switch */
+
+
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 80px;
+	height: 80px;
+	border: 2px solid #dcdcdc;
+	background: #e0e0e0;
+	box-shadow: 7px 7px 23px #bebebe, -7px -7px 23px #ffffff;
+	overflow: hidden;
+	border-radius: 60px;
+}
+
+
+
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	-webkit-transition: 0.5s;
+	transition: 0.5s;
+}
+
